--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-# Supabase配置
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
-SUPABASE_STORAGE_BUCKET=video-generations
+# API Security
+API_KEY=your-secret-api-key-for-nextjs-to-use
+
+# Video Storage
+VIDEO_STORAGE_PATH=./media/videos
 
 # Claude AI配置
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
