--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # API Security
 API_KEY=your-secret-api-key-for-nextjs-to-use
 
+# Database (shared with Next.js)
+DATABASE_URL=postgresql://user:password@localhost:5432/arisvideo
+
 # Video Storage
 VIDEO_STORAGE_PATH=./media/videos
 
