--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,11 @@ dependencies = [
     "pytesseract>=0.3.10",
     "Pillow>=10.0.0",
     "pdfplumber>=0.10.0",
+    "asyncpg>=0.29.0",
+    "databases[postgresql]>=0.9.0",
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-mock>=3.12.0",
+    "pytest-cov>=4.1.0",
+    "faker>=22.0.0",
 ]
